<resources>
    <string name="app_name">PriceTracker</string>
    <string name="account">Cont</string>
    <string name="favorites">Favorite</string>
    <string name="search">Cauta</string>
    <string name="mail">E-mail</string>
    <string name="password">Parola</string>
    <string name="login">Autentificare</string>
    <string name="register">Inregistrare</string>
    <string name="username">Nume utilizator</string>
    <string name="signout">Iesi din cont</string>
</resources>