<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_login_infos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_login_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_login_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <ImageView
        android:id="@+id/iv_login_app_logo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:layout_constraintBottom_toTopOf="@id/guideline_login_logo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:rotation="-20"
        android:layout_marginBottom="8dp"
        android:src="@drawable/cart" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/et_login_mail"
        app:layout_constraintBottom_toTopOf="@id/guideline_login_infos"
        app:layout_constraintRight_toRightOf="@id/guideline_login_right"
        app:layout_constraintLeft_toLeftOf="@id/guideline_login_left"
        android:layout_marginBottom="4dp"
        android:hint="@string/mail"
        android:textColorHint="@color/iguana_green"
        android:shadowColor="@color/iguana_green" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/et_login_password"
        app:layout_constraintTop_toBottomOf="@id/guideline_login_infos"
        app:layout_constraintRight_toRightOf="@id/guideline_login_right"
        app:layout_constraintLeft_toLeftOf="@id/guideline_login_left"
        android:layout_marginTop="4dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/iguana_green"
        android:shadowColor="@color/iguana_green" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/guideline_login_btn"
        app:layout_constraintRight_toRightOf="@id/guideline_login_right"
        app:layout_constraintLeft_toLeftOf="@id/guideline_login_left"
        android:layout_marginBottom="4dp"
        android:background="@drawable/btn_login"
        android:text="@string/login"
        android:textStyle="italic|bold"
        android:textColor="@color/white"
        android:elevation="4dp"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/guideline_login_btn"
        app:layout_constraintRight_toRightOf="@id/guideline_login_right"
        app:layout_constraintLeft_toLeftOf="@id/guideline_login_left"
        android:layout_marginTop="4dp"
        android:background="@drawable/btn_register"
        android:text="@string/register"
        android:textStyle="italic|bold"
        android:textColor="@color/white"
        android:elevation="4dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>