<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/guideline_account_usr_photo"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/guideline_account_usr_photo_start"
        app:layout_constraintGuide_percent="0.0" />


    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/guideline_account_usr_info_end"
        app:layout_constraintGuide_percent="1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/guideline_account_usr_photo"
        app:layout_constraintTop_toBottomOf="@id/guideline_account_usr_photo_start"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent">
        <ImageView
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:src="@drawable/user_def"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="8dp"
        app:layout_constraintBottom_toTopOf="@id/guideline_account_usr_info_end"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_account_usr_photo"
        app:layout_constraintVertical_bias="1.0">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cardview_account_user_info"
            android:layout_marginTop="16dp"
            android:elevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="4dp">

                <TextView
                    android:id="@+id/tv_account_username_foo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/username"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_account_username"
                    android:layout_toEndOf="@id/tv_account_username_foo"
                    android:padding="8dp"
                    android:layout_marginStart="16dp"
                    android:text="abracadabra "
                    android:textStyle="italic"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_account_email_foo"
                    android:layout_below="@id/tv_account_username_foo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/mail"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_account_email"
                    android:layout_toEndOf="@id/tv_account_email_foo"
                    android:layout_below="@id/tv_account_username"
                    android:padding="8dp"
                    android:layout_marginStart="16dp"
                    android:text="abracadabra@gmail.com"
                    android:textStyle="italic"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_account_user_signout"
            android:background="@drawable/btn_register_first"
            android:text="@string/signout"
            android:textColor="@color/white"
            android:textStyle="italic"
            android:padding="16dp"
            android:layout_below="@id/cardview_account_user_info"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"/>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>